# crewai

./: .env  .gitignore  CLAUDE.md  README.md  Razorpay API docs - Plazza.md  Slack API docs - Plazza.md  crewai_visualization.py  explore_db_schema_focused.py  fix_summary.md  patch_summary.md  requirements_db_doc.txt  sales_ai.py  sales_ai_debug.py  website_scraper.py
asana_manager/: README.md  browse_project.py  compare_project.py  create_project.py  create_project_from_markdown.py  find_project.py  list_projects.py  list_workspaces_and_teams.py  pyproject.toml  requirements.txt
asana_manager/src/asana_manager/: crew.py  main.py
asana_manager/src/asana_manager/config/: agents.yaml  tasks.yaml
asana_manager/src/asana_manager/tools/: __init__.py  (+3 more)
asana_manager/templates/: generic.md  marketing.md  software.md
plazza_analytics/: .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  FIXES_DOCUMENTATION.md  README.md  REFACTOR_PLAN.md  RETENTION_TOOL_FIX.md  TESTING_FIXES.md  pyproject.toml  test_crew_kb.py  test_db_tool.py  test_delegation.py  test_kb_access.py  test_kb_access_basic.py  test_previous_analysis_tool.py  test_retention_tool.py  test_save_knowledge.py  test_template_interpolation.py  test_validation_only.py
plazza_analytics/knowledge/: customer_insights.md  data_standardization.md  database_operations.md  database_schemas.md  elasticsearch_operations.md  order_count.md  order_statistics.md  sales_analysis.md  synchronization_patterns.md  user_preference.txt
plazza_analytics/src/plazza_analytics/: crew.py  crew.py.backup  main.py  test_retention_tool.py
(+91 files in other folders)
